2010-07-31  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45052
	* ipa-pure-const.c (check_stmt): Check volatileness.
  
2010-07-31  Richard Guenther  <rguenther@suse.de>

	* ipa-prop.c (ipa_modify_formal_parameters): Use
	build_distinct_type_copy.

2010-07-31  Richard Guenther  <rguenther@suse.de>

	* DEV-PHASE: Set back to prerelease.
	* BASE-VER: Bump to 4.5.2.

2010-07-31  Release Manager

	* GCC 4.5.1 released.

2010-07-30  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Backport from mainline.
	2010-07-22  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

 	PR target/43698
	* config/arm/arm.md: Split arm_rev into *arm_rev and *thumb1_rev.
	Set *arm_rev to be predicable.

2010-07-27  Nick Clifton  <nickc@redhat.com>

	* Import this patch from the mainline:

	2010-06-30  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx-modes.def: New file.
	* config/rx/rx.h (FIRST_PSEUDO_REGISTER): Increase to 17.
	(CC_REGNUM): Define.
	(FIXED_REGISTERS, CALL_USED_REGISTERS, REGISTER_NAMES): Add cc
	register.
	(CC_NO_CARRY, NOTICE_UPDATE_CC): Delete.
	(SELECT_CC_MODE): Define.
	* config/rx/rx.md (CC_REG): Define.  Update all patterns to use
	(reg:CC CC_REG) instead of (cc0).
	(attr "cc"): Delete.
	(cbranchsi4): Do not split compare and branch here. Instead move
	it to...
	(cbranchsi4_<code>): ... here.  New patterns.
	(cmpsi): Call rx-compare_redundant to find out if it is necessary
	to emit the compare instruction.
	* config/rx/rx.c (rx_gen-cond_branch_template): Remove tests of
	cc_status flags.
	(rx_get_stack_layout): Iterate up to before CC_REGNUM not
	FIRST_PSEUDO_REGNUM.
	(rx_expand_prologue, rx_expand_epilogue): Likewise.
	(rx_notice_update_cc): Delete.
	(rx_cc_modes_compatible): New function.
	(flags_needed_for_conditional): New function.
	(flags_from_mode): New function.
	(rx_compare_redundant): New function - scans backwards through
	insn list to find out if condition flags are already set correctly.
	(TARGET_CC_MODES_COMPATIBLE): Define.