@@ -1,3 +1,8 @@
+2010-07-31  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	PR c++/45112
+	* testsuite/g++.dg/pr45112.C: New test.
+
 2010-07-31  Release Manager
 
 	* GCC 4.5.1 released.
