@@ -1,3 +1,8 @@
+2010-07-31  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	PR c++/45112
+	* cp/decl.c (duplicate_decls): Merge DECL_USER_ALIGN and DECL_PACKED.
+
 2010-07-31  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/45052
